--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2fb63cf
+	base = 95d1894
 	trimbase = 
 	parent = release/kinetic/um6
-	previous = 
+	previous = 2fb63cf
